--- a/src/components/Winner/Winner.css
+++ b/src/components/Winner/Winner.css
@@ -2,6 +2,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    margin-bottom: 3%;
 }
 
 .winnerContainerInfo {
