--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,15 @@
 html {
     background-color: #1C1C1C;
 }
+
+a {
+    color: #1E9C6A;
+}
+
+a:hover {
+    color: #C11F75;
+}
+
+a:active {
+    color: #fff;
+}
