--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,16 @@
 header {
     color: #fff;
-    padding: 1% 3%;
+    padding: 12px 3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #090711;
+}
+
+.visible {
+    display: block;
+}
+
+.hidden {
+    display: none;
 }
