--- a/src/components/Winner/Winner.css
+++ b/src/components/Winner/Winner.css
@@ -7,25 +7,42 @@
 }
 
 .winnerContainerInfo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10% 20% 1% 20%;
-    gap: 5%;
     background-color: rgb(0, 0, 0, .8);
     color: #fff;
 }
 
-.winnerContainer button {
-    cursor: pointer;
-    background-color: #1E9C6A;
-    border: none;
-    padding: 2% 4%;
-    font-weight: 600;
-    color: #fff;
-    letter-spacing: 1px;
+@media (min-width: 1024px) {
+    .winnerContainerInfo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10% 20% 1% 20%;
+        gap: 5%;
+    }
 }
 
-.winnerContainer button:hover {
-    background-color: #C11F75;
+@media (min-width: 768px) and (max-width: 1023px) {
+    .winnerContainerInfo {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 7% 20%;
+    }
+    .winnerContainerInfo img {
+        margin-bottom: 5%;
+    }
+}
+
+@media (max-width: 767px) {
+    .winnerContainerInfo {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 7% 20%;
+    }
+    .winnerContainerInfo img {
+        margin-bottom: 5%;
+    }
 }
