--- a/src/App.scss
+++ b/src/App.scss
@@ -234,6 +234,37 @@ button, .button {
         }
     }
 }
+.spinner-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .spinner {
+        display: inline-block;
+        width: 60px;
+        height: 60px;
+        &:after {
+            content: " ";
+            display: block;
+            width: 50px;
+            height: 50px;
+            margin: 8px;
+            border-radius: 50%;
+            border: 6px solid $button;
+            border-color: $button transparent $button transparent;
+            animation: spinner 1.2s linear infinite;
+        }
+        @keyframes spinner {
+            0% {
+              transform: rotate(0deg);
+            }
+            100% {
+              transform: rotate(360deg);
+            }
+          }
+    }
+}
+
+
 
 
 
