--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 $primary-bg: #0E0C1B;
 $secondary-bg: #090711;
 $first: #FFF;
-$second: #037ecf;
-$link: #8d2dfa;
-$link-hover: #54159c;
+$second: #03cfcf;
+$link: #0099ff;
+$link-hover: #015d9b;
 $button: #037ecf;
 $button-hover: #015d9b;
 $overlay: rgb(0, 0, 0, .8);
